--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -14,7 +14,8 @@ framework:
     validation:      { enable_annotations: true }
     templating:
         engines: ['twig']
-        assets_version: 1.0.0
+    assets:
+        version: 1.0.0
     default_locale:  "%locale%"
     trusted_hosts:   ~
     trusted_proxies: ~
@@ -35,11 +36,28 @@ assetic:
     bundles:        [ ]
     filters:
        lessphp:
-            file: %kernel.root_dir%/../vendor/oyejorge/less.php/lessc.inc.php
-            apply_to: "\.less$"
+            file: "%kernel.root_dir%/../vendor/oyejorge/less.php/lessc.inc.php"
+            apply_to: '.less$'
        cssrewrite: ~
 
-# Doctrine Configuration
+# BootstrapBundle Configuration
+braincrafted_bootstrap:
+    jquery_path: "%kernel.root_dir%/../src/Fuz/QuickStartBundle/Resources/public/js/jquery-2.1.1.min.js"
+    css_preprocessor: "lessphp"
+    auto_configure:
+      knp_menu: false
+
+# Supported Website Languages
+jms_i18n_routing:
+    default_locale: "en"
+    locales: ["en"]
+    strategy: "prefix_except_default"
+
+# KnpMenu template configuration
+knp_menu:
+    twig:
+        template: "FuzQuickStartBundle::knp_menu.html.twig"
+
 doctrine:
     dbal:
         driver:   "%database_driver%"
@@ -49,31 +67,3 @@ doctrine:
         user:     "%database_user%"
         password: "%database_password%"
         charset:  UTF8
-
-    orm:
-        auto_generate_proxy_classes: "%kernel.debug%"
-        auto_mapping: true
-
-# Swiftmailer Configuration
-swiftmailer:
-    transport: "%mailer_transport%"
-    host:      "%mailer_host%"
-    username:  "%mailer_user%"
-    password:  "%mailer_password%"
-    spool:     { type: memory }
-
-# BootstrapBundle Configuration
-braincrafted_bootstrap:
-    jquery_path: %kernel.root_dir%/../src/Fuz/QuickStartBundle/Resources/public/js/jquery-2.1.1.min.js
-    css_preprocessor: lessphp
-    auto_configure:
-      knp_menu: false
-
-jms_i18n_routing:
-    default_locale: en
-    locales: [en, fr]
-    strategy: prefix_except_default
-
-knp_menu:
-    twig:
-        template: FuzQuickStartBundle::knp_menu.html.twig
