--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,8 +1,7 @@
-
 fuz_quickstart:
     resource: "@FuzQuickStartBundle/Resources/config/routing.yml"
 
-fuz_app:
+app:
     resource: "@FuzAppBundle/Controller/"
-    type:     annotation
+    type:     "annotation"
     prefix:   /
