--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,17 +1,29 @@
 security:
+
     providers:
         in_memory:
             memory: ~
 
+    role_hierarchy:
+        ROLE_ADMIN:       "ROLE_USER"
+
+    providers:
+
     firewalls:
         dev:
-            pattern: ^/(_(profiler|wdt|error)|css|images|js)/
+            pattern: "^/(_(profiler|wdt|error)|css|images|js)/"
             security: false
+
+        main:
+            pattern: "^/"
+            anonymous: true
+
         default:
             anonymous: ~
 
     access_control:
-        - { path: ^/login, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/connect, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/user, role: ROLE_USER }
-        - { path: ^/logout, role: ROLE_USER }
+        - { path: "^/login", role: "IS_AUTHENTICATED_ANONYMOUSLY" }
+        - { path: "^/user", role: "ROLE_USER" }
+        - { path: "^/logout", role: "ROLE_USER" }
+        - { path: "^/admin", role: "ROLE_ADMIN" }
+
