--- a/composer.json
+++ b/composer.json
@@ -1,32 +1,44 @@
 {
-   "name": "ninsuo/symfony-collection",
+   "name": "ninsuo/quickstart",
    "license": "MIT",
    "type": "project",
-   "description": "Symfony2 collection demo website",
+   "description": "An empty Symfony2 project that provides lots of ready-to-use tools for quick & not-so-dirty developments",
    "autoload": {
-      "psr-0": {"": "src/", "SymfonyStandard": "app/"}
-   },
-   "require": {
-      "php": ">=5.3.3",
-      "symfony/symfony": "~2.3",
-      "doctrine/orm": "~2.2,>=2.2.3",
-      "doctrine/doctrine-bundle": "~1.2",
+        "psr-4": {
+            "": "src/"
+        },
+        "classmap": [
+            "app/AppKernel.php",
+            "app/AppCache.php"
+        ]
+    },
+    "require": {
+      "php": ">=5.5.9",
+      "symfony/symfony": "^3.0",
+      "doctrine/orm": "^2.5",
+      "doctrine/doctrine-bundle": "^1.6",
+      "doctrine/doctrine-cache-bundle": "^1.2",
       "twig/extensions": "~1.0",
       "symfony/assetic-bundle": "~2.3",
-      "symfony/swiftmailer-bundle": "~2.3",
-      "symfony/monolog-bundle": "~2.4",
-      "sensio/distribution-bundle": "~3.0,>=3.0.12",
-      "sensio/framework-extra-bundle": "~3.0",
-      "incenteev/composer-parameter-handler": "~2.0",
+      "symfony/swiftmailer-bundle": "^2.3",
+      "symfony/monolog-bundle": "^2.8",
+      "jms/i18n-routing-bundle": "^2.0",
+      "symfony/polyfill-apcu": "^1.0",
+      "sensio/distribution-bundle": "^5.0",
+      "sensio/framework-extra-bundle": "^3.0.2",
+      "incenteev/composer-parameter-handler": "^2.0",
       "braincrafted/bootstrap-bundle": "~2.0",
       "twbs/bootstrap": "3.0.*",
       "oyejorge/less.php": "~1.5",
-      "jms/i18n-routing-bundle": "~1.1",
       "jms/translation-bundle": "~1.1",
-      "knplabs/knp-menu-bundle": "~2"
+      "knplabs/knp-menu-bundle": "^2.0",
+      "easycorp/easy-security-bundle": "^1.0",
+      "egeloen/ckeditor-bundle": "^4.0",
+      "exercise/htmlpurifier-bundle": "^0.2.3"
    },
    "require-dev": {
-      "sensio/generator-bundle": "~2.3"
+      "sensio/generator-bundle": "^3.0",
+      "symfony/phpunit-bridge": "^3.0"
    },
    "scripts": {
       "post-root-package-install": [
@@ -39,7 +51,8 @@
          "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
          "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
          "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::removeSymfonyStandardFiles",
-         "Braincrafted\\Bundle\\BootstrapBundle\\Composer\\ScriptHandler::install"
+         "Braincrafted\\Bundle\\BootstrapBundle\\Composer\\ScriptHandler::install",
+         "php app/console assetic:dump web/"
       ],
       "post-update-cmd": [
          "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
@@ -48,11 +61,14 @@
          "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
          "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
          "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::removeSymfonyStandardFiles",
-         "Braincrafted\\Bundle\\BootstrapBundle\\Composer\\ScriptHandler::install"
+         "Braincrafted\\Bundle\\BootstrapBundle\\Composer\\ScriptHandler::install",
+         "php app/console assetic:dump web/"
       ]
    },
    "config": {
-      "bin-dir": "bin"
+       "platform": {
+            "php": "5.5.9"
+        }
    },
    "extra": {
       "symfony-app-dir": "app",
@@ -60,9 +76,6 @@
       "symfony-assets-install": "symlink",
       "incenteev-parameters": {
          "file": "app/config/parameters.yml"
-      },
-      "branch-alias": {
-         "dev-master": "2.7-dev"
       }
    }
 }
