--- a/src/Fuz/QuickStartBundle/Resources/config/services.yml
+++ b/src/Fuz/QuickStartBundle/Resources/config/services.yml
@@ -1,26 +1,33 @@
 parameters:
-    quickstart.oauth_user_provider.class: Fuz\QuickStartBundle\Provider\OAuthUserProvider
-    hwi_oauth.account.connector.class: Fuz\QuickStartBundle\Connect\AccountConnect
+    base.service.class: Fuz\QuickStartBundle\Base\BaseService
     quickstart.locale.listener.class: Fuz\QuickStartBundle\EventListener\LocaleListener
     quickstart.last_route.listener.class: Fuz\QuickStartBundle\EventListener\LastRouteListener
+    quickstart.routing.class: Fuz\QuickStartBundle\Services\Routing
 
 services:
 
-    quickstart.oauth_user_provider:
-        class: %quickstart.oauth_user_provider.class%
-        arguments: [@session, @doctrine.orm.entity_manager]
-
-    hwi_oauth.account.connector:
-        class: %hwi_oauth.account.connector.class%
+    base.service:
+        class: %base.service.class%
+        abstract: true
+        calls:
+          - [setContainer, ["@service_container"]]
 
     quickstart.locale.listener:
-        class: %quickstart.locale.listener.class%
-        arguments: ["%kernel.default_locale%"]
+        class: '%quickstart.locale.listener.class%'
+        arguments:
+            - '%kernel.default_locale%'
         tags:
             - { name: kernel.event_subscriber }
 
     quickstart.last_route.listener:
-        class: %quickstart.last_route.listener.class%
-        arguments: [@router]
+        class: '%quickstart.last_route.listener.class%'
+        arguments:
+            - '@quickstart.routing'
         tags:
             - { name: kernel.event_subscriber }
+
+    quickstart.routing:
+        class: '%quickstart.routing.class%'
+        arguments:
+            - '@router'
+
