--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,9 @@
 {
-   "name": "ninsuo/quickstart",
+   "name": "ninsuo/symfony-collection",
+   "description": "Symfony collection demo website",
    "license": "MIT",
    "type": "project",
-   "description": "An empty Symfony2 project that provides lots of ready-to-use tools for quick & not-so-dirty developments",
+   "description": "An empty Symfony project that provides lots of ready-to-use tools for quick & not-so-dirty developments",
    "autoload": {
         "psr-4": {
             "": "src/"
