added symfony2 demo website link

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -1,5 +1,6 @@
 # This file is auto-generated during the composer install
 parameters:
+    secret: ~
     locale: en
     supported_locales: ~
     database_driver: pdo_mysql
