--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
    },
    "require": {
       "php": ">=5.3.3",
+      "twig/twig": "^1",
       "symfony/symfony": "~2.3",
       "doctrine/orm": "~2.2,>=2.2.3",
       "doctrine/doctrine-bundle": "~1.2",
