[WIP] prepared a full demo, will be helpful to test during development

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -5,3 +5,8 @@ app:
     resource: "@FuzAppBundle/Controller/"
     type:     "annotation"
     prefix:   /
+
+app_options:
+    resource: "@FuzAppBundle/Controller/Options/"
+    type:     "annotation"
+    prefix:   /
